tests/baselines/reference/objectFreeze.errors.txt
tests/cases/compiler/objectFreeze.ts(9,3): error TS2540: Cannot assign to '0' because it is a read-only property.
tests/cases/compiler/objectFreeze.ts(12,3): error TS2540: Cannot assign to 'b' because it is a read-only property.


==== tests/cases/compiler/objectFreeze.ts (2 errors) ====
    const f = Object.freeze(function foo(a: number, b: string) { return false; });
    f(1, "") === false;
    
    class C { constructor(a: number) { } }
    const c = Object.freeze(C);
    new c(1);
    
    const a = Object.freeze([1, 2, 3]);
    a[0] = a[2].toString();
      ~
!!! error TS2540: Cannot assign to '0' because it is a read-only property.
    
    const o = Object.freeze({ a: 1, b: "string", c: true });
    o.b = o.a.toString();
      ~
!!! error TS2540: Cannot assign to 'b' because it is a read-only property.
    